--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -38,6 +38,7 @@
     height: 35px;
     margin: 10px 0 2px 0;
     background: $grey-2;
+    color: $grey-1;
     border: none;
     border-radius: 5px;
     text-align: center;
