--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,9 +1,28 @@
 // colors from lightest(1) to darkest(5)
 $white: #e7e7e7;
-$light-grey: #acaeac;
 
-// dark mode
 $grey-1: #acaeac;
 $grey-2: #383838;
 $grey-3: #202020;
 $grey-4: #181818;
+$grey-5: #000000;
+
+$green-1: #00d100;
+$green-2: #27ae60;
+$green-3: #219651;
+$green-4: #197941;
+$green-5: #11552d;
+
+$blue-1: #50b0da;
+$blue-2: #479dc2;
+$blue-3: #3e85a3;
+$blue-4: #326c85;
+$blue-5: #27576b;
+
+$purple-1: #8c8db4;
+
+$orange-1: #f17f42;
+$orange-2: #d6713a;
+$orange-3: #b45f31;
+$orange-4: #944f2a;
+$orange-5: #7a4223;
