--- a/src/index.scss
+++ b/src/index.scss
@@ -11,6 +11,9 @@ body {
   box-sizing: border-box;
   background: $grey-4;
   font-family: 'Oswald', sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-content: center;
 }
 
 code {
