--- a/src/pages/Main/Main.scss
+++ b/src/pages/Main/Main.scss
@@ -1,16 +1,70 @@
-@import '../../styles/base.scss';
+@import "../../styles/base.scss";
 
 .main {
   padding: 108px 16px 0 16px;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
+
+  @include tablet-view() {
+    padding: 108px 24px 0 24px;
+  }
+
+  &__header {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+
+    @include tablet-view() {
+      flex-direction: row;
+    }
+  }
 
   &__title {
     font-weight: 400;
     color: $grey-1;
     width: 100%;
-    margin: 12px 0 6px 0;;
+    margin: 12px 0 6px 0;
+  }
+
+  &__toggle {
+    margin: 0 0 10px 0;
+    align-self: center;
+    display: flex;
+
+    @include tablet-view() {
+      margin: 0;
+    }
+  }
+
+  &__toggle-btn {
+    font-size: 14px;
+    background: none;
+    color: $grey-1;
+    border: 1px solid $grey-1;
+    padding: 10px 21px;
+    outline: none;
+
+    &--left {
+      border-top-left-radius: 4px;
+      border-bottom-left-radius: 4px;
+    }
+
+    &--right {
+      border-top-right-radius: 4px;
+      border-bottom-right-radius: 4px;
+    }
+
+    &--selected {
+      background: $grey-2;
+      color: $green-2;
+    }
+  }
+
+  &__display {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    max-width: 1310px;
+    margin: 0 auto;
   }
 }
 
