--- a/src/components/DisplayCard/DisplayCard.scss
+++ b/src/components/DisplayCard/DisplayCard.scss
@@ -5,13 +5,34 @@
   max-width: 330px;
   margin: 0 0 25px 0;
 
+  @include laptop-view() {
+    display: flex;
+    flex-direction: column;
+    max-width: none;
+  }
+
+  &__content {
+    height: 550px;
+
+    @include laptop-view() {
+      display: flex;
+      height: auto;
+    }
+  }
+
   &__img {
     width: 100%;
+
+    @include laptop-view() {
+      width: 400px;
+      height: 250px;
+      object-fit: cover;
+    }
   }
 
   &__info {
     padding: 10px;
-    height: 320px;
+    height: 250px;
   }
 
   &__title {
@@ -48,4 +69,8 @@
   width: 100%;
   height: 1px;
   background: $grey-1;
+
+  @include laptop-view() {
+    margin: 25px 0 0 0;
+  }
 }
