--- a/src/pages/Main/Main.scss
+++ b/src/pages/Main/Main.scss
@@ -7,6 +7,15 @@
     padding: 108px 24px 0 24px;
   }
 
+  @include laptop-view() {
+    padding: 75px 180px 0 180px;
+    display: flex;
+  }
+
+  &__content {
+    width: 100%;
+  }
+
   &__header {
     width: 100%;
     display: flex;
@@ -32,6 +41,10 @@
 
     @include tablet-view() {
       margin: 0;
+    }
+
+    @include laptop-view() {
+      display: none;
     }
   }
 
@@ -59,12 +72,72 @@
     }
   }
 
+  &__search {
+    font-family: inherit;
+    width: 400px;
+    height: 35px;
+    margin: 20px 0 2px 0;
+    background: $grey-2;
+    color: $grey-1;
+    border: none;
+    border-radius: 5px;
+    text-align: center;
+    display: none;
+
+    @include laptop-view() {
+      display: flex;
+    }
+
+    &::placeholder {
+      color: $grey-1;
+    }
+  }
+
+
+
   &__display {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
     max-width: 1310px;
     margin: 0 auto;
+
+    @include laptop-view() {
+      flex-direction: column;
+      flex-wrap: nowrap;
+    }
+  }
+
+  &__side-toggle {
+    display: none;
+
+    @include laptop-view() {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-evenly;
+      background: $grey-3;
+      width: 200px;
+      height: 150px;
+      padding: 10px;
+      margin: 75px 50px 0 0;
+      border-radius: 5px;
+    }
+  }
+
+  &__side-toggle-btn {
+    font-size: 14px;
+    background: none;
+    color: $grey-1;
+    border: none;
+    border-radius: 4px;
+    padding: 10px 21px;
+    outline: none;
+    width: 100%;
+
+    &--selected {
+      background: $grey-2;
+      color: $green-2;
+    }
   }
 }
 
