--- a/src/pages/Main/Main.scss
+++ b/src/pages/Main/Main.scss
@@ -9,7 +9,9 @@
 
   @include laptop-view() {
     padding: 75px 180px 0 180px;
+    margin: 0 auto;
     display: flex;
+    max-width: 1440px;
   }
 
   &__content {
@@ -55,6 +57,7 @@
     border: 1px solid $grey-1;
     padding: 10px 21px;
     outline: none;
+    cursor: pointer;
 
     &--left {
       border-top-left-radius: 4px;
@@ -119,7 +122,7 @@
       width: 200px;
       height: 150px;
       padding: 10px;
-      margin: 75px 50px 0 0;
+      margin: 82px 50px 0 0;
       border-radius: 5px;
     }
   }
@@ -133,6 +136,7 @@
     padding: 10px 21px;
     outline: none;
     width: 100%;
+    cursor: pointer;
 
     &--selected {
       background: $grey-2;
