--- a/src/pages/ChallengeManager/ChallengeManager.scss
+++ b/src/pages/ChallengeManager/ChallengeManager.scss
@@ -34,7 +34,8 @@
   }
 
   &__info {
-    padding: 10px 0 10px 20px;
+    width: 100%;
+    padding: 10px 0 0 20px;
   }
 
   &__title {
@@ -57,13 +58,35 @@
 
   &__dates {
     font-weight: 300;
-    color: $green-3;
+    color: $green-2;
     margin: 10px;
   }
 
-  &__description {
-    font-weight: 300;
-    color: $white;
-    margin: 0;
+  &__toggle {
+    margin: 65px 0 0 0;
   }
+
+  &__toggle-btn {
+    font-size: 14px;
+    background: none;
+    color: $grey-1;
+    border: none;
+    border-radius: 4px;
+    padding: 10px 21px;
+    outline: none;
+    width: 100%;
+    cursor: pointer;
+
+    &--selected {
+      background: $grey-2;
+      color: $green-1;
+    }
+  }
+}
+
+.challenge-divider {
+  width: 100%;
+  height: 1px;
+  background: $grey-1;
+  margin: 30px 0 16px 0;
 }
