changed file names

--- a/src/pages/Main/Jason_Huang_FrontEnd_Developer_Main.scss
+++ b/src/pages/Main/Jason_Huang_FrontEnd_Developer_Main.scss
@@ -1,4 +1,4 @@
-@import "../../styles/base.scss";
+@import "../../styles/Jason_Huang_FrontEnd_Developer_base.scss";
 
 .main {
   padding: 108px 16px 0 16px;
