--- a/src/components/ChallengeDiscussion/Jason_Huang_FrontEnd_Developer_ChallengeDiscussion.scss
+++ b/src/components/ChallengeDiscussion/Jason_Huang_FrontEnd_Developer_ChallengeDiscussion.scss
@@ -1,4 +1,4 @@
-@import "../../styles/base.scss";
+@import "../../styles/Jason_Huang_FrontEnd_Developer_base.scss";
 
 .challenge-discussion {
   margin: 20px 0 0 0;
