--- a/src/components/ChallengeOverview/Jason_Huang_FrontEnd_Developer_ChallengeOverview.scss
+++ b/src/components/ChallengeOverview/Jason_Huang_FrontEnd_Developer_ChallengeOverview.scss
@@ -1,4 +1,4 @@
-@import "../../styles/base.scss";
+@import "../../styles/Jason_Huang_FrontEnd_Developer_base.scss";
 
 .challenge-overview {
   margin: 20px 0 0 0;
