--- a/src/components/DisplayCard/Jason_Huang_FrontEnd_Developer_DisplayCard.scss
+++ b/src/components/DisplayCard/Jason_Huang_FrontEnd_Developer_DisplayCard.scss
@@ -1,4 +1,4 @@
-@import '../../styles/base.scss';
+@import '../../styles/Jason_Huang_FrontEnd_Developer_base.scss';
 
 .display-card {
   border-radius: 5px;
