--- a/src/pages/ChallengeManager/Jason_Huang_FrontEnd_Developer_ChallengeManager.scss
+++ b/src/pages/ChallengeManager/Jason_Huang_FrontEnd_Developer_ChallengeManager.scss
@@ -69,6 +69,7 @@
   &__toggle-btn {
     font-size: 14px;
     background: none;
+    background-color: none;
     color: $grey-1;
     border: none;
     border-radius: 4px;
@@ -76,6 +77,12 @@
     outline: none;
     width: 100%;
     cursor: pointer;
+    transition: background-color 1s, color 1s;
+
+    &:hover {
+      background-color: $grey-4;
+      color: $white;
+    }
 
     &--selected {
       background: $grey-2;
