--- a/src/pages/Main/Jason_Huang_FrontEnd_Developer_Main.scss
+++ b/src/pages/Main/Jason_Huang_FrontEnd_Developer_Main.scss
@@ -26,6 +26,7 @@
 
     @include tablet-view() {
       flex-direction: row;
+      justify-content: space-between;
     }
   }
 
@@ -96,8 +97,6 @@
     }
   }
 
-
-
   &__display {
     display: flex;
     flex-wrap: wrap;
@@ -130,6 +129,7 @@
   &__side-toggle-btn {
     font-size: 14px;
     background: none;
+    background-color: none;
     color: $grey-1;
     border: none;
     border-radius: 4px;
@@ -137,6 +137,12 @@
     outline: none;
     width: 100%;
     cursor: pointer;
+    transition: background-color 1s, color 1s;
+
+    &:hover {
+      background-color: $grey-4;
+      color: $white;
+    }
 
     &--selected {
       background: $grey-2;
@@ -150,4 +156,10 @@
   height: 1px;
   background: $grey-1;
   margin: 0 0 16px 0;
+}
+
+.fade-in {
+  // opacity: 0;
+  // position: relative;
+  // left: 200px;
 }
