--- a/src/components/NavBar/Jason_Huang_FrontEnd_Developer_NavBar.scss
+++ b/src/components/NavBar/Jason_Huang_FrontEnd_Developer_NavBar.scss
@@ -9,6 +9,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  z-index: 1;
 
   @include tablet-view() {
     padding: 10px 24px;
