--- a/src/pages/Main/Jason_Huang_FrontEnd_Developer_Main.scss
+++ b/src/pages/Main/Jason_Huang_FrontEnd_Developer_Main.scss
@@ -141,7 +141,7 @@
 
     &:hover {
       background-color: $grey-4;
-      color: $white;
+      color: $green-2;
     }
 
     &--selected {
@@ -155,11 +155,5 @@
   width: 100%;
   height: 1px;
   background: $grey-1;
-  margin: 0 0 16px 0;
-}
-
-.fade-in {
-  // opacity: 0;
-  // position: relative;
-  // left: 200px;
+  margin: 0 0 25px 0;
 }
